# awesome-trmnl

./: .gitignore  Cargo.toml  LICENSE  README.md  devenv.nix  devenv.yaml  rustfmt.toml
crates/blender/: Cargo.toml
crates/blender/src/: lib.rs
crates/server/: Cargo.toml
crates/server/assets/: style.css  test.screen.html
crates/server/src/: device.rs  error.rs  generator.rs  main.rs  net.rs  pages.rs  plugins.rs  resource.rs  serve.rs  storage.rs
crates/server/src/plugins/: mashup.rs  ticktick.rs  wasm.rs  weather.rs
crates/server/templates/: ticktick.stpl
crates/server/templates/mashup/: left_right.stpl  single.stpl
crates/server/templates/pages/: error.stpl  index.stpl  screen.stpl  test_screen.stpl
crates/server/templates/serve/: preview.stpl
crates/server/templates/weather/: full.stpl  minimal.stpl
crates/server/tools/: atrmnl_server.service
memory/: MEMORY.md  project_plugin_dynamism.md  project_sailfish_migration.md
