[package]
name = "blender"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
chromiumoxide = { version = "0.9.1", default-features = false, features = [
    "rustls",
    "zip8",
] }
futures = { version = "0.3.32", default-features = false, features = [
    "async-await",
    "std",
] }
image = { version = "0.25.10", default-features = false, features = [
    "png",
    "qoi",
] }
log = "0.4.29"
thiserror = "2.0"
tokio = { version = "1.52.2", default-features = false, features = ["fs", "sync", "time"] }
url = { version = "2.5.8", default-features = false }
