[package]
name = "server"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "atrmnl_server"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.12.12", features = ["json", "blocking"] }
axum = { version = "0.8.1", default-features = false, features = [
    "tokio",
    "http1",
    "http2",
    "macros",
] }
tokio = { version = "1", default-features = false, features = [
    "rt-multi-thread",
    "sync",
    "net",
    "macros",
] }
blender = { path = "../blender" }
log = "0.4.25"
maud = { version = "0.27.0", features = ["axum"] }
url = { version = "2.5.4", default-features = false, features = ["serde"] }
color-eyre = "0.6.3"
chrono = { version = "0.4.39", default-features = false, features = [
    "clock",
    "serde",
] }
tower-http = { version = "0.6.2", features = [
    "fs",
    "trace",
], default-features = false }
serde = { version = "1.0.217", features = ["derive"] }
futures = { version = "0.3.31", default-features = false }
http = "1.2.0"
toml = "0.8.20"
eyre = "0.6.12"
serde_json = "1.0.138"
iconify = "0.3.1"
itertools = "0.14.0"
clap = { version = "4.5.30", features = ["derive"] }
tracing = "0.1.41"
axum-server = { version = "0.7.1", default-features = false, features = ["tls-rustls"] }
pretty_env_logger = "0.5.0"
rust-embed = { version = "8.5.0", features = ["axum", "mime_guess"] }
mime_guess = "2.0.5"
